<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" 
	android:background="#80000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/biaoqing_grid_layout" 
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	<LinearLayout android:orientation="vertical" 
  		android:background="@drawable/bg_biaoqing_info" 
  		android:layout_width="fill_parent" 
  		android:layout_height="fill_parent" 
  		android:layout_margin="30.0dip">
        <TextView android:textSize="16.0sp" 
        	android:textColor="#ff000000" 
        	android:gravity="center" 
        	android:background="@drawable/dialog_title_background" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:text="@string/str_insert" 
        	android:layout_weight="0.0" />
        <GridView android:gravity="center" 
        	android:id="@+id/biaoqing_grid" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:fadingEdge="vertical" 
        	android:scrollbars="vertical" 
        	android:stretchMode="columnWidth" 
        	android:numColumns="6" 
        	android:layout_weight="1.0" />
        <LinearLayout android:orientation="vertical" 
        	android:id="@+id/get_image_btn_group" 
        	android:visibility="gone"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:layout_weight="0.0">
            <LinearLayout android:background="#ffcccccc" 
            	android:layout_width="fill_parent" 
            	android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" 
            	android:id="@+id/capture_image" 
            	android:layout_width="fill_parent" 
            	android:layout_height="48.0dip" 
            	android:minHeight="48.0dip">
                <ImageView android:layout_gravity="center_vertical" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:layout_marginLeft="10.0dip" 
                	android:layout_marginRight="10.0dip" 
                	android:src="@drawable/pick_from_camera" />
                <TextView android:textSize="14.0dip" 
                	android:textStyle="bold" 
                	android:textColor="#ff666666" 
                	android:layout_gravity="center_vertical" 
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:text="@string/str_take_picture" 
                	android:layout_weight="1.0" />
                <LinearLayout android:gravity="right" 
                	android:layout_width="wrap_content" 
                	android:layout_height="fill_parent" 
                	android:minWidth="50.0dip">
                    <ImageView android:layout_gravity="center_vertical" 
                    	android:paddingRight="16.0dip" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content" 
                    	android:src="@drawable/do_invite" 
                    	android:minWidth="30.0dip" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:background="#ffcccccc" 
            	android:layout_width="fill_parent" 
            	android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" 
            	android:id="@+id/send_image" 
            	android:layout_width="fill_parent" 
            	android:layout_height="48.0dip" 
            	android:minHeight="48.0dip">
                <ImageView android:layout_gravity="center_vertical" 
                	android:layout_width="wrap_content" 
                	android:layout_height="wrap_content" 
                	android:layout_marginLeft="10.0dip" 
                	android:layout_marginRight="10.0dip" 
                	android:src="@drawable/pick_from_picture" />
                <TextView android:textSize="14.0dip" 
                	android:textStyle="bold" 
                	android:textColor="#ff666666" 
                	android:layout_gravity="center_vertical" 
                	android:layout_width="fill_parent" 
                	android:layout_height="wrap_content" 
                	android:text="@string/str_picture_collection" 
                	android:layout_weight="1.0" />
                <LinearLayout android:gravity="right"
                	android:layout_width="wrap_content" 
                	android:layout_height="fill_parent" 
                	android:minWidth="50.0dip">
                    <ImageView android:layout_gravity="center_vertical" 
                    	android:paddingRight="16.0dip" 
                    	android:layout_width="wrap_content" 
                    	android:layout_height="wrap_content" 
                    	android:src="@drawable/do_invite" 
                    	android:minWidth="30.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
